# PID_Controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MainCode/src/: main.cpp
Matlab/: PID_ControllerTest.m  PI_AntiWindup.slx  SetupParams.m  ValidatePiWIthAntiWindup.m
PID_Lib/: CMakeLists.txt
PID_Lib/inc/: PID_Controller.h
PID_Lib/src/: PID_Controller.cpp
PID_Lib/test/: test_PID_Controller.cpp
Scripts/: GccCompileProject.bat  GccRunTestCases.bat
